HOME. add slider vacancy. ALL. add breadcrumps include and svg sprites

--- a/src/html/home/prefooter.html
+++ b/src/html/home/prefooter.html
@@ -11,11 +11,6 @@
                 </div>
             </div>
         </div>
-        <div class="feedback">
-            <div class="feedback-container container">
-                <p class="feedback-title">Так же вы можете связаться с нами с помощью формы обратной связи</p>
-                <img class="feedback-arrow" src="../../img/prefooter/arrowdown.svg" alt="arrowdown"/>
-            </div>
-        </div>
     </div>
+    @@include('../all-pages/feedback-form.html',{})
 </section>
