--- a/src/html/home/sixth-screen.html
+++ b/src/html/home/sixth-screen.html
@@ -7,8 +7,9 @@
             <p class="sixth-screen-tagline">
                 Требуются специалисты:
             </p>
-            <div class="sixth-screen-container container">
-                <div class="sixth-screen-container-box">
+            <div class="sixth-screen-container vacancy-slider swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide sixth-screen-container-box">
                     <p class="sixth-screen-container-box-position">Инженер-программист</p>
                     <div class="sixth-screen-container-box-point">
                     <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
@@ -24,7 +25,7 @@
                     </div>
                     <button class="sixth-screen-container-box-btn">Интересно!</button>
                 </div>
-                <div class="sixth-screen-container-box">
+                    <div class="swiper-slide sixth-screen-container-box">
                     <p class="sixth-screen-container-box-position">Инженер-программист</p>
                     <div class="sixth-screen-container-box-point">
                         <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
@@ -40,7 +41,7 @@
                     </div>
                     <button class="sixth-screen-container-box-btn">Интересно!</button>
                 </div>
-                <div class="sixth-screen-container-box">
+                    <div class="swiper-slide sixth-screen-container-box">
                     <p class="sixth-screen-container-box-position">Инженер-программист</p>
                     <div class="sixth-screen-container-box-point">
                         <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
@@ -56,7 +57,7 @@
                     </div>
                     <button class="sixth-screen-container-box-btn">Интересно!</button>
                 </div>
-                <div class="sixth-screen-container-box">
+                    <div class="swiper-slide sixth-screen-container-box">
                     <p class="sixth-screen-container-box-position">Инженер-программист</p>
                     <div class="sixth-screen-container-box-point">
                         <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
@@ -71,18 +72,34 @@
                         <span class="sixth-screen-container-box-point-text">Зарплата: от 40 000 р. </span>
                     </div>
                     <button class="sixth-screen-container-box-btn">Интересно!</button>
+                </div>
+                    <div class="swiper-slide sixth-screen-container-box">
+                        <p class="sixth-screen-container-box-position">Инженер-программист</p>
+                        <div class="sixth-screen-container-box-point">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="sixth-screen-container-box-point-text">Опыт работы: от 1 год</span>
+                        </div>
+                        <div class="sixth-screen-container-box-point">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="sixth-screen-container-box-point-text">График работы: 5/2</span>
+                        </div>
+                        <div class="sixth-screen-container-box-point">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="sixth-screen-container-box-point-text">Зарплата: от 40 000 р. </span>
+                        </div>
+                        <button class="sixth-screen-container-box-btn">Интересно!</button>
+                    </div>
                 </div>
             </div>
             <div class="sixth-screen-container-arrows">
-                <div class="sixth-screen-container-arrow">
-                    <img src="../img/home/arrow_left.svg" alt="arrow" />
+                <div class="sixth-screen-container-arrow swiper-vacancy-arrow-prev">
+                    <img src="../img/home/arrow_left.svg" alt="arrow"/>
                 </div>
-                <div class="sixth-screen-container-arrow">
-                    <img src="../img/home/arrow_right.svg" alt="arrow" />
+                <div class="sixth-screen-container-arrow swiper-vacancy-arrow-next">
+                    <img src="../img/home/arrow_right.svg" alt="arrow"/>
                 </div>
             </div>
             <p class="sixth-screen-lowStat">А если тебе еще не хватает знаний, приходи к нам на обучение. Мы поможем освоить азы профессии программиста.</p>
-
         </div>
     </div>
 </section>
