Automation: added styles in this page. Changed padding in .container in all pages.

--- a/src/html/all-pages/dropdown.html
+++ b/src/html/all-pages/dropdown.html
@@ -36,7 +36,7 @@
             <a href="/analysis.html">
                 <li class="dropdown-submenu-item">Анализ и оптимизация бизнесс-процессов</li>
             </a>
-            <a href="">
+            <a href="/automation.html">
                 <li class="dropdown-submenu-item">Автоматизация бизнесс-процессов</li>
             </a>
             <a href="">
