--- a/src/crm-implement.html
+++ b/src/crm-implement.html
@@ -46,39 +46,27 @@
                             <p class="page-list-blueTitle">Почему Битрикс24?</p>
                             <div class="page-list-list">
                                 <div class="page-list-item">
-                                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                                        <use href="#resize-horizontal-round"/>
-                                    </svg>
+                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                                     <span class="page-list-text">Большой спектр возможностей для работы с клиентом и не только. Корпоративный портал, можно наладить работу разных отделов.</span>
                                 </div>
                                 <div class="page-list-item">
-                                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                                        <use href="#resize-horizontal-round"/>
-                                    </svg>
+                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                                     <span class="page-list-text">Возможность автоматизации и оптимизации бизнес-процессов</span>
                                 </div>
                                 <div class="page-list-item">
-                                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                                        <use href="#resize-horizontal-round"/>
-                                    </svg>
+                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                                     <span class="page-list-text">Интеграция большого количества сервисов и ПО, в том числе и с 1С</span>
                                 </div>
                                 <div class="page-list-item">
-                                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                                        <use href="#resize-horizontal-round"/>
-                                    </svg>
+                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                                     <span class="page-list-text">Удобный функционал</span>
                                 </div>
                                 <div class="page-list-item">
-                                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                                        <use href="#resize-horizontal-round"/>
-                                    </svg>
+                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                                     <span class="page-list-text">Контроль и отслеживание корректной работы сайта и хостинг-сервера</span>
                                 </div>
                                 <div class="page-list-item">
-                                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                                        <use href="#resize-horizontal-round"/>
-                                    </svg>
+                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                                     <span class="page-list-text">Очень гибкий функционал, который хорошо дорабатывается под потребности компании</span>
                                 </div>
                             </div>
