Crm-support: added styles in this page

--- a/src/html/all-pages/dropdown.html
+++ b/src/html/all-pages/dropdown.html
@@ -39,7 +39,7 @@
             <a href="/automation.html">
                 <li class="dropdown-submenu-item">Автоматизация бизнесс-процессов</li>
             </a>
-            <a href="">
+            <a href="/crm-support.html">
                 <li class="dropdown-submenu-item">Поддержка CRM</li>
             </a>
         </ul>
