--- a/src/support.html
+++ b/src/support.html
@@ -99,7 +99,7 @@
 
         <div class="page-costs container">
             <p class="page-costs-header">Стоимость услуг</p>
-            <div class="page-costs-block container">
+            <div class="page-costs-block">
                 <div class="page-costs-item">
                     <img class="costs-item-img" src="@img/icons/icons.svg#wallet1" alt="wallet1"/>
                     <p class="costs-item-header">От 4000 рублей/мес.</p>
