--- a/src/html/all-pages/dropdown.html
+++ b/src/html/all-pages/dropdown.html
@@ -46,7 +46,7 @@
 
         <ul class="dropdown-submenu">
             <p class="dropdown-submenu-title">Техническое сопровождение</p>
-            <a href="">
+            <a href="/maintenance.html">
                 <li class="dropdown-submenu-item">Техническое сопровождение CRM</li>
             </a>
             <a href="">
