Integrations: added styles in this page.

--- a/src/html/all-pages/dropdown.html
+++ b/src/html/all-pages/dropdown.html
@@ -49,11 +49,11 @@
             <a href="/maintenance.html">
                 <li class="dropdown-submenu-item">Техническое сопровождение CRM</li>
             </a>
-            <a href="">
+            <a href="/support.html">
                 <li class="dropdown-submenu-item">Техническое сопровождение сайтов</li>
             </a>
-            <a href="">
-                <li class="dropdown-submenu-item">Интеграции</li>
+            <a href="/integrations.html">
+                <li class="dropdown-submenu-title">Интеграции</li>
             </a>
         </ul>
         <div class="dropdown-main-item">
