Cases. Added styles in this page.

--- a/src/1C-integration.html
+++ b/src/1C-integration.html
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                 </div>
-                <img class="content-img" src="./img/integration/intrgration-content.png" alt="img"/>
+                <img class="content-img" src="img/integration/intrgration-content.png" alt="img"/>
             </div>
         </div>
 
