--- a/src/html/all-pages/header.html
+++ b/src/html/all-pages/header.html
@@ -6,9 +6,15 @@
         <img class="header-menu-item-arrow" src="@img/icons/icons.svg#arrow" alt="arrow"/>
       </li>
       <li class="header-menu-item">Битрикс</li>
-      <li class="header-menu-item">Кейсы</li>
-      <li class="header-menu-item">О нас</li>
-      <li class="header-menu-item">Блог</li>
+      <a href="/cases.html">
+        <li class="header-menu-item">Кейсы</li>
+      </a>
+      <a href="">
+        <li class="header-menu-item">О нас</li>
+      </a>
+      <a href="">
+        <li class="header-menu-item">Блог</li>
+      </a>
       <a href="/contacts.html">
         <li class="header-menu-item">Контакты</li>
       </a>
