--- a/src/html/all-pages/header.html
+++ b/src/html/all-pages/header.html
@@ -9,7 +9,7 @@
       <a href="/cases.html">
         <li class="header-menu-item">Кейсы</li>
       </a>
-      <a href="">
+      <a href="/about.html">
         <li class="header-menu-item">О нас</li>
       </a>
       <a href="">
