Blog: added styles in this page and added href on fitst block

--- a/src/html/all-pages/header.html
+++ b/src/html/all-pages/header.html
@@ -12,7 +12,7 @@
       <a href="/about.html">
         <li class="header-menu-item">О нас</li>
       </a>
-      <a href="">
+      <a href="/blog.html">
         <li class="header-menu-item">Блог</li>
       </a>
       <a href="/contacts.html">
