--- a/src/cases.html
+++ b/src/cases.html
@@ -21,15 +21,18 @@
         <p class="page-title container">Кейсы</p>
 
         <div class="cases-content">
+
             <div class="cases-content-item cases-content-item1">
                 <div class="content-item-block">
                     <img class="content-item1-logo" src="img/cases/logo1.png" alt="logo1"/>
                     <p class="content-item-title">Многопрофильный медицинский центр имени Святослава Федорова в Москве</p>
+                    <a href="project.html">
                     <button class="details-btn">Подронее
                         <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1 11L6 6L1 1" stroke="#474747" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                     </button>
+                    </a>
                 </div>
                 <img class="content-item1-img" src="img/cases/image1.png" alt="image1"/>
             </div>
