Development: added adaptive styles

--- a/src/development.html
+++ b/src/development.html
@@ -37,25 +37,31 @@
         </div>
 
 
-        <div class="development-content container">
-            <div class="development-content-header">
-                <h1>Нужен сайт?</h1>
-                <h3>Интернет-магазин или каталог? </h3>
-            </div>
-            <div class="development-content-block">
+        <div class="development-content">
+            <img class="development-content-imgMagic" src="img/development/magic_stick.png" alt="magic-stick">
+            <div class="development-content-cont container">
+
+                <div class="development-content-header">
+                    <h1>Нужен сайт?</h1>
+                    <h3>Интернет-магазин или каталог? </h3>
+                </div>
+
                 <p class="development-content-text">Наша команда специализируется в разработке сайтов на базе 1С-Битрикс, Laravel, Modx, имея значительный опыт и сертификаты в указанных продуктах. Наша компания готова вам предложить лучший вариант для сотрудничества.</p>
-                <div class="development-content-img">
+
+                <div class="development-content-header2">
                     <h1>Вам повезло!</h1>
                     <h3>Вы уже нашли то, что искали</h3>
-                    <div class="content-block-gallery">
-                        <img class="block-gallery-item" src="img/development/bitrix.png" alt="bitrix"/>
-                        <img class="block-gallery-item" src="img/development/laravel-logo%201.png" alt="laravel"/>
-                        <img class="block-gallery-item" src="img/development/Modx-logo%201.png" alt="Modx"/>
-                        <img class="block-gallery-item" src="img/development/wordpress-logo%201.png" alt="wordpress"/>
-                    </div>
+                </div>
+
+                <div class="content-block-gallery">
+                    <img class="block-gallery-item" src="img/development/bitrix.png" alt="bitrix"/>
+                    <img class="block-gallery-item" src="img/development/laravel-logo%201.png" alt="laravel"/>
+                    <img class="block-gallery-item" src="img/development/Modx-logo%201.png" alt="Modx"/>
+                    <img class="block-gallery-item" src="img/development/wordpress-logo%201.png" alt="wordpress"/>
                 </div>
             </div>
         </div>
+
 
 
         <div class="page-pros">
@@ -107,18 +113,14 @@
 
         <div class="development-offer">
           <div class="development-offer-container container">
-              <p class="development-offer-title-1">В зависимости от бизнес-задач будущего ресурса,</p>
-              <p class="development-offer-title-2">мы готовы предложить</p>
+              <p class="development-offer-title1">В зависимости от бизнес-задач будущего ресурса,</p>
+              <p class="development-offer-title2">мы готовы предложить</p>
               <div class="development-offer-img">
-                  <img class="offer-main-hands" src="img/development/Frame-178.png" alt="hands"/>
-                  <img class="offer-main-jacket" src="img/development/jaccket.png" alt="jacket"/>
+                  <button class="offer-main-btn offer-main-btn-btnBlue">Готовые сайты</button>
+                  <button class="offer-main-btn offer-main-btn-btnRed">Индивидуальные решения</button>
+                  <img class="offer-main-rightImg" src="img/development/right_hand.png" alt="right_hand"/>
+                  <img class="offer-main-leftImg" src="img/development/left_hand.png" alt="left_hand"/>
               </div>
-<!--              <div class="development-offer-btns">-->
-<!--                  <div class="offer-main-item">Готовые сайты</div>-->
-<!--                  <div class="offer-main-item">Индивидуальные решения</div>-->
-<!--              </div>-->
-<!--              <img class="offer-main-rightImg" src="img/development/right_hand.png" alt="right_hand"/>-->
-<!--              <img class="offer-main-leftImg" src="img/development/left_hand.png" alt="left_hand"/>-->
           </div>
         </div>
 
@@ -128,53 +130,53 @@
             <p class="page-bonuses-title-main">Бонусом вы получите:</p>
             <div class="page-list">
                 <div class="page-list-item">
-                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                        <use href="#resize-horizontal-round"/>
-                    </svg>
-                    <!--                   <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
+<!--                    <svg class="svg-resize-horizontal-round" width="24" height="24">-->
+<!--                        <use href="#resize-horizontal-round"/>-->
+<!--                    </svg>-->
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Хостинг бесплатно + SSL сертификат на 1 год в подарок;</span>
                 </div>
                 <div class="page-list-item">
-                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                        <use href="#resize-horizontal-round"/>
-                    </svg>
-                    <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
+<!--                    <svg class="svg-resize-horizontal-round" width="24" height="24">-->
+<!--                        <use href="#resize-horizontal-round"/>-->
+<!--                    </svg>-->
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Адаптация к мобильной версии</span>
                 </div>
                 <div class="page-list-item">
-                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                        <use href="#resize-horizontal-round"/>
-                    </svg>
-                    <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
+<!--                    <svg class="svg-resize-horizontal-round" width="24" height="24">-->
+<!--                        <use href="#resize-horizontal-round"/>-->
+<!--                    </svg>-->
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Базовая настройка SEO и подключение основных метрик</span>
                 </div>
                 <div class="page-list-item">
-                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                        <use href="#resize-horizontal-round"/>
-                    </svg>
-                    <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
+<!--                    <svg class="svg-resize-horizontal-round" width="24" height="24">-->
+<!--                        <use href="#resize-horizontal-round"/>-->
+<!--                    </svg>-->
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Построим для вас CRM;</span>
                 </div>
                 <div class="page-list-item">
-                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                        <use href="#resize-horizontal-round"/>
-                    </svg>
-                    <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
+<!--                    <svg class="svg-resize-horizontal-round" width="24" height="24">-->
+<!--                        <use href="#resize-horizontal-round"/>-->
+<!--                    </svg>-->
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Консультация по настройке контекстной рекламы для вашего сайта.</span>
                 </div>
                 <p class="page-bonuses-title-second">При необходимости мы также предлагаем:</p>
                 <div class="page-list-item">
-                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                        <use href="#resize-horizontal-round"/>
-                    </svg>
-                    <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
+<!--                    <svg class="svg-resize-horizontal-round" width="24" height="24">-->
+<!--                        <use href="#resize-horizontal-round"/>-->
+<!--                    </svg>-->
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">SEO-оптимизацию</span>
                 </div>
                 <div class="page-list-item">
-                    <svg class="svg-resize-horizontal-round" width="24" height="24">
-                        <use href="#resize-horizontal-round"/>
-                    </svg>
-                    <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
+<!--                    <svg class="svg-resize-horizontal-round" width="24" height="24">-->
+<!--                        <use href="#resize-horizontal-round"/>-->
+<!--                    </svg>-->
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Настройка контекстной рекламы под ключ</span>
                 </div>
             </div>
@@ -191,19 +193,19 @@
               <div class="page-cases-swiper">
                   <div class="swiper-arrows">
                     <div class="swiper-arrow swiper-arrow-prev">
-                    <!--                  <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
-                     <svg class="svg-arrow-slider">
-                        <use href="#arrow-left"/>
-                     </svg>
+                      <img class="svg-arrow-slider" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
+<!--                     <svg class="svg-arrow-slider">-->
+<!--                        <use href="#arrow-left"/>-->
+<!--                     </svg>-->
                     </div>
                     <div class="swiper-arrow swiper-arrow-next">
-                     <svg class="svg-arrow-slider">
-                        <use href="#arrow-right"/>
-                     </svg>
-                    <!--                  <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
+<!--                     <svg class="svg-arrow-slider">-->
+<!--                        <use href="#arrow-right"/>-->
+<!--                     </svg>-->
+                      <img class="svg-arrow-slider svg-arrow-sliderNext" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
                     </div>
                   </div>
-                  <span class="page-look"><a class="page-look-href" href='#'>Смотреть все</a></span>
+                  <span class="page-look"><a class="page-look-href" href="cases.html">Смотреть все</a></span>
               </div>
             </div>
         </div>
