Internrt-shops: corrected adaptive design. 1C-integration: made adaptive design. Changed px on rem. Added some transitions.

--- a/src/1C-integration.html
+++ b/src/1C-integration.html
@@ -21,10 +21,8 @@
         <p class="page-title container">Интеграция с 1С</p>
 
         <div class="page-header">
-            <button class="page-blueBtn">Начать интеграцию
-                <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 11L6 6L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
+            <button class="page-blueBtn"><span class="phone">Начать</span><span class="desktop">Начать интеграцию</span>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
 
@@ -37,45 +35,31 @@
 
                     <div class="page-list-list">
                         <div class="page-list-item">
-                            <svg class="svg-resize-horizontal-round" width="24" height="24">
-                                <use href="#resize-horizontal-round"/>
-                            </svg>
+                            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="list-item-text">видеть все отчеты по позициям прозрачно с автоматическим формированием</span>
                         </div>
                         <div class="page-list-item">
-                            <svg class="svg-resize-horizontal-round" width="24" height="24">
-                                <use href="#resize-horizontal-round"/>
-                            </svg>
+                            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="list-item-text">иметь всегда актуальный каталог, ассортимент и цены</span>
                         </div>
                         <div class="page-list-item">
-                            <svg class="svg-resize-horizontal-round" width="24" height="24">
-                                <use href="#resize-horizontal-round"/>
-                            </svg>
+                            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="list-item-text">избавиться от ошибок при формировании заказа и от их потерь</span>
                         </div>
                         <div class="page-list-item">
-                            <svg class="svg-resize-horizontal-round" width="24" height="24">
-                                <use href="#resize-horizontal-round"/>
-                            </svg>
+                            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="list-item-text">быть в курсе цепочки продаж как со стороны производителя, так и со стороны покупателя</span>
                         </div>
                         <div class="page-list-item">
-                            <svg class="svg-resize-horizontal-round" width="24" height="24">
-                                <use href="#resize-horizontal-round"/>
-                            </svg>
+                            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="list-item-text">видеть максимально актуальную информацию о статусе заказа</span>
                         </div>
                         <div class="page-list-item">
-                            <svg class="svg-resize-horizontal-round" width="24" height="24">
-                                <use href="#resize-horizontal-round"/>
-                            </svg>
+                            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="list-item-text">своевременно получать информацию об ошибках</span>
                         </div>
                         <div class="page-list-item">
-                            <svg class="svg-resize-horizontal-round" width="24" height="24">
-                                <use href="#resize-horizontal-round"/>
-                            </svg>
+                            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="list-item-text">автоматический перенос данных, добавление товаров за несколько минут</span>
                         </div>
                     </div>
@@ -129,21 +113,15 @@
         <p class="page-list-title">Существуют различные подходы к реализации интеграции с приложениями 1С, какой из них выбрать – зависит от требований задачи.</p>
         <div class="page-list-list">
             <div class="page-list-item">
-                <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                </svg>
+                <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="list-item-text">Реализация на основе механизмов интеграции, предоставляемых платформой, своего собственного специализированного API на стороне приложения 1С</span>
             </div>
             <div class="page-list-item">
-                <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                </svg>
+                <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="list-item-text">Использование механизмов интеграции платформы, которые предоставляют доступ снаружи к объектной модели приложения и не требуют доработки приложения или создания расширения.</span>
             </div>
             <div class="page-list-item">
-                <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                </svg>
+                <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="list-item-text">Использование готовых прикладных протоколов, реализованных в типовых решениях 1С.</span>
             </div>
         </div>
